# gucken

./: .gitignore  LICENSE.txt  README.md  anitui.py  create-shortcut.vbs  pyproject.toml  requirements.txt  run.cmd
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  provider-request.md  question-support.md
.github/workflows/: python-publish.yml
src/anitui/: __main__.py  aniskip.py  anitui.py  anitui.tcss
src/anitui/hoster/: doodstream.py  streamtape.py  veo.py
src/anitui/player/: common.py  mpv.py  vlc.py  wmplayer.py
src/anitui/provider/: aniworld.py  common.py
src/anitui/tracker/: anilist.py  myanimelist.py
src/gucken/: __init__.py  __main__.py  _logging.py  alembic.ini  aniskip.py  custom_widgets.py  db.py  default_settings.toml  gucken.css  gucken.py  gucken.tcss  networking.py  packer.py  rome.py  schema.py  settings.py  skip.lua  update.py  utils.py
src/gucken/alembic/: env.py  script.py.mako
src/gucken/alembic/versions/: b9728daf0b07_init.py
src/gucken/hoster/: _hosters.py  common.py  doodstream.py  filemoon.py  loadx.py  luluvdo.py  speedfiles.py  streamtape.py  veo.py  vidmoly.py  vidoza.py
src/gucken/player/: _players.py  android.py  common.py  ffplay.py  flatpak.py  mpv.py  vlc.py  wmplayer.py
src/gucken/provider/: aniworld.py  burningseries.py  common.py  serienstream.py
src/gucken/resources/: default_settings.toml  gucken.css  mpv_gucken.lua  mpv_skip.lua  vlc_gucken.lua  vlc_skip.lua
src/gucken/tracker/: anilist.py  myanimelist.py
test/: fuzzy.py  headers.jsonc  networking.py  networking2.py  presence.py  proxy.py  test.py  test_request.py  user_agents.json
test/benchmark/: extract_html.py
test/benchmark/http/: Cargo.toml  new_session.py  same_session.py
test/benchmark/http/src/: main.rs
test/google_recaptcha/: bs.to.html  final.py  final_api.py  pypasser.py  reload.py  siteverify.py  speech_recognition.py
test/img/: RichPixels_ChafaSymbols.py  iterm2_prot.py  kitty.py  sixels_prot.py  textual_imageview.py
