[project]
name = "gucken"
dynamic = ["version"]
description = "Gucken is a Terminal User Interface which allows you to browse and watch your favorite anime's with style."
authors = [{name="Commandcracker"}]
maintainers = [{name="Commandcracker"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
  "textual>=0.70.0",
  "beautifulsoup4>=4.12.3",
  "httpx[http2]>=0.27.0",
  "pypresence>=4.3.0",
  "packaging>=24.1",
  "platformdirs>=4.2.2",
  "toml>=0.10.2",
  "fuzzywuzzy>=0.18.0",
  "async_lru>=2.0.4",
  "SQLAlchemy>=2.0.31",
  "alembic>=1.13.1"
  #"yt-dlp>=2024.4.9",
  #"mpv>=1.0.6",
]
keywords = [
  "gucken",
  "anime",
  "serien",
  "series",
  "tui"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: German",
  "Programming Language :: Lua",
  "Programming Language :: Python",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Android",
  #"Operating System :: MacOS",
  #"Operating System :: iOS",
]

[project.optional-dependencies]
speedups = [
  "levenshtein>=0.25.1",
  "orjson>=3.10.4"
]
socks = ["httpx[socks]>=0.27.0"]

[project.urls]
Repository = "https://github.com/Commandcracker/gucken"

[project.scripts]
gucken = "gucken.gucken:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/gucken/**", ]

[tool.hatch.version]
path = "src/gucken/__init__.py"
