[project]
name = "gucken"
dynamic = ["version"]
description = "Gucken is a Terminal User Interface which allows you to browse and watch your favorite anime's with style."
authors = [{name="Commandcracker"}]
maintainers = [{name="Commandcracker"}]
license = {file = "LICENSE.txt"}
readme = "README.md"
dependencies = [
  "textual>=3.1.1",
  "textual-image[textual]>=0.8.2",
  "beautifulsoup4>=4.13.4",
  "httpx[http2]>=0.28.1",
  "pypresence>=4.3.0",
  "packaging>=25.0",
  "platformdirs>=4.3.7",
  "toml>=0.10.2",
  "fuzzywuzzy>=0.18.0",
  "async_lru>=2.0.5",
  "rich-argparse>=1.7.0"
  #"yt-dlp>=2025.3.31",
  #"mpv>=1.0.8",
]
keywords = [
  "gucken",
  "anime",
  "serien",
  "series",
  "tui"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: German",
  "Programming Language :: Lua",
  "Programming Language :: Python",
  "Topic :: Games/Entertainment",
  "Topic :: Multimedia",
  "Topic :: Multimedia :: Sound/Audio",
  "Topic :: Multimedia :: Video",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Android",
  #"Operating System :: MacOS",
  #"Operating System :: iOS",
]

[project.optional-dependencies]
speedups = [
  "levenshtein>=0.27.1",
  "orjson>=3.10.16"
]
socks = ["httpx[socks]>=0.28.1"]

[project.urls]
Repository = "https://github.com/Commandcracker/gucken"

[project.scripts]
gucken = "gucken.gucken:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/gucken/**", ]

[tool.hatch.version]
path = "src/gucken/__init__.py"
